--- a/app/core/static/core/css/batchIssueTable.css
+++ b/app/core/static/core/css/batchIssueTable.css
@@ -3,6 +3,11 @@
     font-weight: bold;
 }
 
+.Unavailable {
+    color: red;
+    font-weight: bold;
+}
+
 @media print {
     .site-header {
         display: none !important;
