--- a/app/core/templates/core/blendstatistics.html
+++ b/app/core/templates/core/blendstatistics.html
@@ -176,6 +176,20 @@
                 {% endfor %}
             </table>
         </div>
+        <div id="2024quantitiesTable" class="table-responsive-sm displayTable">
+            <table class="table text-left table-bordered">
+                <thead class="thead-dark" style="position: sticky; top: 55px; z-index: 2 !important;">
+                    <tr>
+                        <th scope="col" class='text-center'>Blend Quantity 2024</th>
+                    </tr>
+                </thead>
+                {% for item in blend_totals_2024 %}
+                    <tr>
+                        <td class="{{ item.week_number}}">{{ item.blend_quantity }}</td>
+                    </tr>
+                {% endfor %}
+            </table>
+        </div>
     </div>
     
 {% endblock content %}
