--- a/app/core/templates/core/reports/startronreport.html
+++ b/app/core/templates/core/reports/startronreport.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block content %}
 <div class='text-center'><a href='/core/reports/'>Return to the Reports Page</a></div>
