Add titles to all report page templates.

--- a/app/core/templates/core/reports/billofmaterialsreport.html
+++ b/app/core/templates/core/reports/billofmaterialsreport.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 {% load static %}
 
+{% block title %}<title>Bill of Materials</title>{% endblock %}
 
 {% block content %}
-
 <link rel="stylesheet" type="text/css" href="{% static 'core/css/countsAndTransactions.css' %}">
 <div class='text-center'><a href='/core/reports/'>Return to the Reports Page</a></div>
 <div class='text-center'>
