--- a/app/core/templates/core/reports/reporterrorpage.html
+++ b/app/core/templates/core/reports/reporterrorpage.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
+{% block title %}<title>Report Error</title>{% endblock %}
 
 {% block content %}
 <div class='text-center'><a href='/core/reports/'>Return to the Reports Page</a></div>
