--- a/app/core/templates/core/reports/countsandtransactionsreport.html
+++ b/app/core/templates/core/reports/countsandtransactionsreport.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
+{% block title %}<title>Counts and Transactions</title>{% endblock %}
 
 
 {% block content %}
