--- a/app/core/templates/core/reports/upcomingrunsreport/upcomingrunsreport.html
+++ b/app/core/templates/core/reports/upcomingrunsreport/upcomingrunsreport.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{% block title %}<title>Upcoming Runs</title>{% endblock %}
 
 {% block content %}
     {% if report_type == 'Component' %}
