--- a/app/core/templates/core/inventorycounts/partialcontainerlabel.html
+++ b/app/core/templates/core/inventorycounts/partialcontainerlabel.html
@@ -1,91 +1,4 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block title %}<title>Container Label</title>{% endblock %}
 
-{% block scripts %}
-    <link rel="stylesheet" type="text/css" href ="{% static 'core/css/partialContainerLabel.css' %}">
-    <script type="module" src="{% static 'core/js/pageModules/partialContainerLabel.js' %}"></script>
-    <script type="text/javascript" src="{% static 'core/js/thirdPartyLibraries/BrowserPrint-3.1.250.js' %}"></script>
-    <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
-{% endblock %}
-
-{% block content %}
-    <div class="controlsRow text-center">
-        <table>
-            <tr>
-                <td>Item Code:</td>
-                <td><input type="text" id="id_item_code" enterkeyhint="search" placeholder="Search by Item Number" style="width:300px;"></input></td>
-            </tr>
-            <tr>
-                <td>Description:</td>
-                <td><input type="text" id="id_item_description" enterkeyhint="search" placeholder="Search by Desc (min. 3 characters)" style="width:300px;"></input></td>
-            </tr>
-            <tr>
-                <td><label for="label-container-type-dropdown">Container Type:</label></td>
-                <td> 
-                    <select id="label-container-type-dropdown">
-                        <option value=""></option>
-                        <option value="22">Blue Poly Drum</option>
-                        <option value="50">Enzyme/LET Metal Drum</option>
-                        <option value="37">Metal Drum</option>
-                        <option value="125">275gal IBC Tote</option>
-                        <option value="150">300gal IBC Tote</option>
-                        <option value="CUSTOM">Stainless Steel Tote</option>
-                        <option value="CUSTOM">Specialized Poly Tote</option>
-                    </select>
-                </td>
-            </tr>
-            <tr id="custom-tare-container" style="display:none;">
-                <td><label for="custom-tare-weight">Container Weight:</label></td>
-                <td><input id="custom-tare-weight" type="number"></input></td>
-            </tr>
-            <tr style="display:none;">
-                <td><input id="labelQuantity" value=1></input></td>
-            </tr>
-        </table>
-        
-    </div>
-    <br>
-    <div id="labelContainer">
-        <div id="topSection">
-            <div id="topLabelRow"><p id="inventory-label-date">{{ label_contents.date }}</p><div><label for="initialsField">Initials:</label><input id="initialsField" type="text"></input></div></div>
-            <h1 id="inventory-label-item-code">{{ label_contents.item_code }}</h1>
-            <h2 id="inventory-label-item-description">{{ label_contents.item_description }}</h2>
-            <table id="container-info">
-                <tr>
-                    <td class="text-center containerInfoCell"><p>Container Type:</p></td>
-                    <td class="text-center containerInfoCell"><p id="inventory-label-container-type"></p></td>
-                </tr>
-                <tr>
-                    <td class="text-center containerInfoCell"><p>Container Tare Weight:</p></td>
-                    <td class="text-center containerInfoCell"><p id="inventory-label-container-weight"></p></td>
-                </tr>
-                <tr>
-                    <td class="text-center containerInfoCell"><p>Gross Weight:</p></td>
-                    <td class="text-center containerInfoCell"><input type="number" id="gross-weight"></input> lbs.</td>
-                </tr>
-                <tr>
-                    <td class="text-center containerInfoCell"><p>Net Weight:</p></td>
-                    <td class="text-center containerInfoCell"><p id="net-weight"></p></td>
-                </tr>
-                <tr>
-                    <td class="text-center containerInfoCell"><p>Net Gallons:</p></td>
-                    <td class="text-center containerInfoCell"><p id="net-gallons"></p></td>
-                </tr>
-            </table>
-            <p id="inventory-label-container-weight"></p>
-        </div>
-    </div>
-    <br>
-
-    <div class="controlsContainer">
-        
-        <div class="controlsRow text-center">
-            <button id="blendLabelPrintButton" class="btn btn-secondary">Print</button>
-            <button id="printCancelButton" onclick='document.getElementById("blendLabelDialog").close()'>Cancel</button>
-            <br>
-        </div>
-        
-    </div>
-    
-{% endblock content %}
+{% include 'core/modals/partial-container-label.html' %}
